hphp/test/zend/bad/ext/spl/tests/fileobject_getmaxlinelen_error001.php
<?php
$s = new SplFileObject( __FILE__ );
$s->getMaxLineLen('string');

?>